--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.ByJ99B25.js",
+    "file": "_app/immutable/entry/app.SyMENtkS.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -42,7 +42,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CfmH4FiA.js",
+    "file": "_app/immutable/nodes/1.ClTVp8hX.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
     "imports": [
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
-      "_stores.CrF0CoGP.js"
+      "_stores.DI07Gg4Z.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/10.js": {
@@ -82,7 +82,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/12.js": {
-    "file": "_app/immutable/nodes/12.C1-IBYjE.js",
+    "file": "_app/immutable/nodes/12.Co2a7Lgn.js",
     "name": "nodes/12",
     "src": ".svelte-kit/generated/client-optimized/nodes/12.js",
     "isEntry": true,
@@ -91,7 +91,7 @@
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
       "_navbar.DW8wy0cd.js",
-      "_entry.CQ-_EvKG.js",
+      "_entry.BAC_8CVY.js",
       "_background.DFmoeKge.js",
       "_sdgsIcon.C7l2wcaS.js"
     ],
@@ -100,7 +100,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/13.js": {
-    "file": "_app/immutable/nodes/13.buZQnx5l.js",
+    "file": "_app/immutable/nodes/13.sEUUwvh5.js",
     "name": "nodes/13",
     "src": ".svelte-kit/generated/client-optimized/nodes/13.js",
     "isEntry": true,
@@ -110,7 +110,7 @@
       "_index.Dy59Beth.js",
       "_navbar.DW8wy0cd.js",
       "_background.DFmoeKge.js",
-      "_entry.CQ-_EvKG.js"
+      "_entry.BAC_8CVY.js"
     ],
     "css": [
       "_app/immutable/assets/13.B8LmmCK5.css"
@@ -160,7 +160,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.vtC1DHIK.js",
+    "file": "_app/immutable/nodes/3.BVvlkuze.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -170,14 +170,14 @@
       "_index.Dy59Beth.js",
       "_navbar.DW8wy0cd.js",
       "_background.DFmoeKge.js",
-      "_entry.CQ-_EvKG.js"
+      "_entry.BAC_8CVY.js"
     ],
     "css": [
       "_app/immutable/assets/3.Bh0b964G.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.B-zsPW3-.js",
+    "file": "_app/immutable/nodes/4.BKisnc8j.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -185,7 +185,7 @@
     "imports": [
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
-      "_entry.CQ-_EvKG.js",
+      "_entry.BAC_8CVY.js",
       "_events.BNOdUGot.js",
       "_background.DFmoeKge.js",
       "_navbar.DW8wy0cd.js",
@@ -193,7 +193,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.BeYephn9.js",
+    "file": "_app/immutable/nodes/5.N8V50b_M.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -201,8 +201,8 @@
     "imports": [
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
-      "_entry.CQ-_EvKG.js",
-      "_stores.CrF0CoGP.js",
+      "_entry.BAC_8CVY.js",
+      "_stores.DI07Gg4Z.js",
       "_events.BNOdUGot.js",
       "_background.DFmoeKge.js",
       "_navbar.DW8wy0cd.js",
@@ -210,7 +210,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.C7NpTNHD.js",
+    "file": "_app/immutable/nodes/6.DfhbcH49.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -219,7 +219,7 @@
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
       "_navbar.DW8wy0cd.js",
-      "_entry.CQ-_EvKG.js",
+      "_entry.BAC_8CVY.js",
       "_background.DFmoeKge.js",
       "_star.CDTSC9lX.js",
       "_sdgsIcon.C7l2wcaS.js",
@@ -227,7 +227,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.Bljtq-sS.js",
+    "file": "_app/immutable/nodes/7.HPJz7Hbk.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
@@ -236,8 +236,8 @@
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
       "_navbar.DW8wy0cd.js",
-      "_entry.CQ-_EvKG.js",
-      "_stores.CrF0CoGP.js",
+      "_entry.BAC_8CVY.js",
+      "_stores.DI07Gg4Z.js",
       "_background.DFmoeKge.js",
       "_sdgsIcon.C7l2wcaS.js",
       "_events.BNOdUGot.js",
@@ -247,7 +247,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/8.js": {
-    "file": "_app/immutable/nodes/8.nQJmz1X-.js",
+    "file": "_app/immutable/nodes/8.CUgXcFBm.js",
     "name": "nodes/8",
     "src": ".svelte-kit/generated/client-optimized/nodes/8.js",
     "isEntry": true,
@@ -256,7 +256,7 @@
       "_scheduler.BOwFYlz0.js",
       "_index.Dy59Beth.js",
       "_navbar.DW8wy0cd.js",
-      "_entry.CQ-_EvKG.js",
+      "_entry.BAC_8CVY.js",
       "_background.DFmoeKge.js",
       "_events.BNOdUGot.js",
       "_user_data.BknuLSOj.js",
@@ -267,7 +267,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/9.js": {
-    "file": "_app/immutable/nodes/9.CjTHf831.js",
+    "file": "_app/immutable/nodes/9.CAAdjjBk.js",
     "name": "nodes/9",
     "src": ".svelte-kit/generated/client-optimized/nodes/9.js",
     "isEntry": true,
@@ -278,7 +278,7 @@
       "_navbar.DW8wy0cd.js",
       "_background.DFmoeKge.js",
       "_sdgsIcon.C7l2wcaS.js",
-      "_entry.CQ-_EvKG.js"
+      "_entry.BAC_8CVY.js"
     ],
     "css": [
       "_app/immutable/assets/9.CbQlXKsL.css"
@@ -292,8 +292,8 @@
       "_index.Dy59Beth.js"
     ]
   },
-  "_entry.CQ-_EvKG.js": {
-    "file": "_app/immutable/chunks/entry.CQ-_EvKG.js",
+  "_entry.BAC_8CVY.js": {
+    "file": "_app/immutable/chunks/entry.BAC_8CVY.js",
     "name": "entry",
     "imports": [
       "_scheduler.BOwFYlz0.js",
@@ -366,11 +366,11 @@
       "_navbar.DW8wy0cd.js"
     ]
   },
-  "_stores.CrF0CoGP.js": {
-    "file": "_app/immutable/chunks/stores.CrF0CoGP.js",
+  "_stores.DI07Gg4Z.js": {
+    "file": "_app/immutable/chunks/stores.DI07Gg4Z.js",
     "name": "stores",
     "imports": [
-      "_entry.CQ-_EvKG.js"
+      "_entry.BAC_8CVY.js"
     ]
   },
   "_user.BJ6l4HPM.js": {
@@ -394,12 +394,12 @@
     "name": "user_data"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CTHyS0Od.js",
+    "file": "_app/immutable/entry/start.6x8ml4do.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_entry.CQ-_EvKG.js"
+      "_entry.BAC_8CVY.js"
     ]
   }
 }
